# ol-rf-mesh

./: .gitignore  LICENSE  README.md  backend.db  package-lock.json
.github/workflows/: backend-ci.yml  ci.yml  dashboard-ci.yml  lint.yml
ai/: Dockerfile  Dockerfile.tflite  README.md  pyproject.toml  requirements.txt  run_tflite_docker.sh
ai/data/iq/: iq_samples.npz
ai/data/processed/: features.npz
ai/data/raw/: anomaly_0.npy  anomaly_1.npy  anomaly_10.npy  anomaly_11.npy  anomaly_12.npy  anomaly_13.npy  anomaly_14.npy  anomaly_15.npy  anomaly_16.npy  anomaly_17.npy  anomaly_18.npy  anomaly_19.npy  anomaly_2.npy  anomaly_20.npy  anomaly_21.npy  anomaly_22.npy  anomaly_23.npy  anomaly_24.npy  anomaly_25.npy  anomaly_26.npy  anomaly_27.npy  anomaly_28.npy  anomaly_29.npy  anomaly_3.npy  anomaly_30.npy  anomaly_31.npy  anomaly_32.npy  anomaly_33.npy  anomaly_34.npy  anomaly_35.npy  anomaly_36.npy  anomaly_37.npy  anomaly_38.npy  anomaly_39.npy  anomaly_4.npy  anomaly_40.npy  anomaly_41.npy  anomaly_42.npy  anomaly_43.npy  anomaly_44.npy  (+160 more)
ai/scripts/: benchmark_tflite.py  extract_features.py  generate_synthetic_data.py  generate_synthetic_iq.py  train_baseline_model.py  train_tflite_baseline.py  train_tflm_autoencoder.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  logging_config.py  main.py  metrics.py  models.py  schemas.py  state.py
backend/app/api/: alerts.py  history.py  mock.py  nodes.py  spectrum.py  telemetry.py  ws.py
backend/load_tests/: locustfile.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_spectrum_table.py
backend/ol_rf_mesh_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_auth_and_pagination.py  test_health_and_nodes.py  test_load_rf_events.py  test_telemetry_rf_events.py  test_ws_auth.py
dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
docs/: README.md  backend-deployment-checklist.md  checklist.md  field-test-checklist.md  overview.md  packet-schema.md  production-readiness.md
firmware/: CMakeLists.txt  README.md
firmware/idf/: CMakeLists.txt  flash_monitor.sh  sdkconfig
firmware/idf/components/ol_rf_mesh/: CMakeLists.txt  idf_app_main.cpp
firmware/include/: adc.hpp  config.hpp  crypto.hpp  fault.hpp  logging.hpp  mesh.hpp  mesh_encode.hpp  mesh_packet.h  mock_radio.hpp  model_inference.hpp  ota.hpp  radio_driver.hpp  sensors.hpp  spi_bus.hpp  tasks.hpp  telemetry.hpp  watchdog.hpp
firmware/src/: adc.cpp  config.cpp  crypto.cpp  fault.cpp  logging.cpp  main.cpp  mesh.cpp  mesh_encode.cpp  model_inference.cpp  ota.cpp  radio_driver.cpp  sensors.cpp  spi_bus.cpp  tasks.cpp  watchdog.cpp
firmware/tests/: feature_vector.txt  test_hw_smoke.cpp  test_mesh_churn.cpp  test_mesh_codec_fuzz.cpp  test_mesh_convergence.cpp  test_mesh_golden.cpp  test_mesh_retry.cpp  test_mesh_roundtrip.cpp  test_mesh_routing.cpp  test_mesh_security.cpp  test_mesh_send_handler.cpp  test_mesh_ttl_retry.cpp  test_model_contract.cpp  test_model_inference.cpp  test_task_map.cpp
gateway/: mesh_decoder.py
infra/: README.md  docker-compose.yml
