[project]
name = "ol-rf-mesh-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary ; platform_system != 'Windows'",
    "psycopg2 ; platform_system == 'Windows'",
    "httpx",
    "alembic",
    "prometheus-client",
    "structlog",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
